--- a/PruebaConceptoWebService/App.config
+++ b/PruebaConceptoWebService/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_IGetDatos" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://190.248.37.181:31440/WCFPasarela/GetDatos.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IGetDatos"
+                contract="WsPse.IGetDatos" name="BasicHttpBinding_IGetDatos" />
+        </client>
+    </system.serviceModel>
 </configuration>
