--- a/PruebaConceptoWebService/PruebaConceptoWebService.csproj
+++ b/PruebaConceptoWebService/PruebaConceptoWebService.csproj
@@ -34,6 +34,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,11 +44,50 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Connected Services\WsPse\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Connected Services\WsPse\GetDatos.wsdl" />
+    <None Include="Connected Services\WsPse\GetDatos.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\WsPse\GetDatos1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\WsPse\GetDatos2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\WsPse\PruebaConceptoWebService.WsPse.TransactionInformation.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\WsPse\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\WsPse\GetDatos.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\WsPse\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\WsPse\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\WsPse\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
